<resources>
    <string name="app_name">Youcaile</string>
    <string name="tabbar_item_0">购彩大厅</string>
    <string name="tabbar_item_1">数据遗漏</string>
    <string name="tabbar_item_2">@string/str_igkbet</string>
    <string name="tabbar_item_3">我的彩票</string>
    <string name="str_hall">购彩大厅</string>
    <string name="str_igkbet">开奖查询</string>
    <string name="str_omit">数据遗漏</string>
    <string name="str_placeholder">label</string>
    <string name="str_notify">资讯</string>
    <string name="str_lotterySel">彩种选择</string>
    <string name="str_num">号码</string>
    <string name="str_nowOmit">当前遗漏</string>
    <string name="str_maxOmit">最大遗漏</string>
    <string name="str_touzhu">投注</string>
    <string name="str_num_placeholder">00</string>
    <string name="str_time_placeholder">1970-01-01 00:00:00</string>
    <string name="str_recharge">充值</string>
    <string name="str_withdraw">提现</string>
    <string name="str_sign">签到</string>
    <string name="str_loginOut">退出登录</string>
    <string name="str_betlog">投注记录</string>
    <string name="str_capitallog">资金流水</string>
    <string name="str_integrallog">积分纪录</string>
    <string name="str_cardId">身份信息</string>
    <string name="str_contactinfo">联系信息</string>
    <string name="str_bankCardInfo">银行卡信息</string>
    <string name="str_pwd_manager">密码管理</string>
    <string name="str_customer_service">客服</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="str_user_login">用户登录</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_forgetpwd">忘记登录密码</string>
    <string name="str_sendercode">发送验证码</string>
    <string name="str_input_phonenum">手机号码</string>
    <string name="str_input_verificationcode">请输入验证码</string>
    <string name="str_input_password">登录密码</string>
    <string name="str_input_password_again">确认登录密码</string>
    <string name="str_customer_service_telephone_number">4000-51-8760</string>
    <string name="str_message">消息</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="str_my_account">我的账户</string>
    <string name="str_account_yue">账户余额</string>
    <string name="str_order_history_sel">历史订单查询</string>
    <string name="str_paypwd_set">支付密码设置</string>
    <string name="str_alert">提示</string>
    <string name="str_plssetcoinpwd">请先设置资金密码</string>
    <string name="str_plsbindbankcard">请先绑定银行卡</string>
    <string name="str_my_coin">我的积分</string>
    <string name="str_my_score">我的积分</string>
    <string name="str_sign_welcome">[每日签到]赢积分 换取游彩乐好礼</string>
    <string name="str_sign_count">累计签到天数</string>
    <string name="str_item_placeholder">item</string>
    <string name="str_all">全部</string>
    <string name="str_income">收入</string>
    <string name="str_expense">支出</string>
    <string name="str_relname">真实姓名:</string>
    <string name="str_identifyCardId">身份证号:</string>
    <string name="str_identifierCardId">身份证号:</string>
    <string name="str_id_warning1">·请务必如实填写“真实姓名”和“身份证号”，这两个信息必须和身份证上的内容完全一致，否则无法领奖；护照，军官证，台胞证，香港身份证，社会保障卡，机动车驾驶证等均不能领奖；</string>
    <string name="str_warning">注意事项</string>
    <string name="str_id_warning2">·依据《彩票管理条例》的规定，未成年人不能购买彩票；</string>
    <string name="str_id_warning3">·购买彩票是个人行为，请保证以上信息是您个人的真实信息，不要使用公司或其他人的信息。</string>
    <string name="str_contactInfo">联系信息</string>
    <string name="str_phonenum">手机号:</string>
    <string name="str_num_qq">qq号:</string>
    <string name="str_input_qq">请输入qq号</string>
    <string name="str_email">邮箱:</string>
    <string name="str_input_email">请输入邮箱</string>
    <string name="str_submit">提交</string>
    <string name="str_bindBankCard">绑定银行卡</string>
    <string name="str_bankName">开户行</string>
    <string name="str_bank_name">开户银行:</string>
    <string name="str_sel_bankName">请选择开户行</string>
    <string name="str_bankcard_num">银行卡号:</string>
    <string name="str_input_bankcard_num">请输入银行卡号</string>
    <string name="str_setLoginPwd">登录密码设置</string>
    <string name="str_setPayPwd">支付密码设置</string>
    <string name="str_phonenum_placeholder">188****8888</string>
    <string name="str_input_newPwd">请输入新密码</string>
    <string name="str_verifity_newPwd">请确认新密码</string>
    <string name="str_sure">确定</string>
    <string name="str_member_register">会员注册</string>
    <string name="str_congratulate_register_success">恭喜您注册成功</string>
    <string name="str_complete_info">完善信息</string>
    <string name="str_goto_main">前往首页</string>
    <string name="str_relnameAttestation">实名认证</string>
    <string name="str_warning_realName">您必须先实名认证才能进行下一步操作</string>
    <string name="str_input_relname">请输入真实姓名</string>
    <string name="str_input_identifierCardNum">请输入身份证号</string>
    <string name="str_sel_playType">玩法选择</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_openNum">开奖号码</string>
    <string name="str_issue">期号</string>
    <string name="str_shake_for_random">摇一摇随机</string>
    <string name="str_auto_sel">机选</string>
    <string name="str_settlement">结算</string>
    <string name="str_clean">清空</string>
    <string name="str_all0">全</string>
    <string name="str_big">大</string>
    <string name="str_small">小</string>
    <string name="str_odd">奇</string>
    <string name="str_even">偶</string>
    <string name="str_clean0">清</string>
    <string name="str_digit">位数</string>
    <string name="str_omit0">遗漏</string>
    <string name="str_selnum">选号</string>
    <string name="str_no_filter">不过滤号码</string>
    <string name="str_filter_same_three">过滤三位相同的号码</string>
    <string name="str_filter_same_two">过滤两位相同的号码</string>
    <string name="str_filter_had_same">过滤全部有相同数字的号码</string>
    <string name="str_sel">选择</string>
    <string name="str_add">添加</string>
    <string name="str_input_num">请输入号码</string>
    <string name="str_format_demand">格式要求：</string>
    <string name="str_chart">走势图</string>
    <string name="str_recent_draw">近期开奖</string>
    <string name="str_omit_hidden">隐藏遗漏</string>
    <string name="str_playType_intro">玩法说明</string>
    <string name="str_try_luck">试试手气</string>
    <string name="str_random_five_stakes">机选五注</string>
    <string name="str_random_ten_stakes">机选十注</string>
    <string name="str_balance">结算</string>
    <string name="str_clean_list">清空列表</string>
    <string name="str_random_one_stakes">随机一注</string>
    <string name="str_customer_selnums">自选号码</string>
    <string name="str_chase">追</string>
    <string name="str_term">期</string>
    <string name="str_bet">投</string>
    <string name="str_times">倍</string>
    <string name="str_bet_count">投注总额:</string>

</resources>
