<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGray"
    tools:context="com.scrop.mine.ContactActivity">
    <com.scrop.navi.NaviLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/str_contactInfo"
        app:backHidden="false">
    </com.scrop.navi.NaviLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_phonenum"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_placeholder"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dip"
            android:background="@color/colorLightGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_num_qq"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                style="@style/EditTextNoLine"
                android:hint="@string/str_input_qq"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dip"
            android:background="@color/colorLightGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                style="@style/EditTextNoLine"
                android:hint="@string/str_input_email"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:backgroundTint="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/str_submit"/>

</LinearLayout>
