<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60.0dip"
    android:gravity="center"
    android:background="@color/colorTabbarBg">

    <RadioButton
        android:id="@+id/id_rb_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabbar_item_0"
        android:drawableTop="@drawable/tabbar_item_icon_0"
        style="@style/TabbarItemBtn"
        android:checked="false" />

    <RadioButton
        android:id="@+id/id_rb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabbar_item_1"
        android:drawableTop="@drawable/tabbar_item_icon_1"
        style="@style/TabbarItemBtn"
        android:checked="false" />

    <RadioButton
        android:id="@+id/id_rb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabbar_item_2"
        android:drawableTop="@drawable/tabbar_item_icon_2"
        style="@style/TabbarItemBtn"
        android:checked="false" />

    <RadioButton
        android:id="@+id/id_rb_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabbar_item_3"
        android:drawableTop="@drawable/tabbar_item_icon_3"
        style="@style/TabbarItemBtn"/>
</RadioGroup>