<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_identity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGray"
    tools:context="com.scrop.mine.IdentityInfoActivity">
    <com.scrop.navi.NaviLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="身份信息"
        app:backHidden="false">
    </com.scrop.navi.NaviLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_relname"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_placeholder"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="20dip"
            android:background="@color/colorLightGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_identifierCardId"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_placeholder"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_warning"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dip"
        android:textColor="@color/colorBlue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/str_id_warning1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/str_id_warning2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/str_id_warning3"/>
</LinearLayout>
