<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_set_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scrop.mine.SetPwdActivity"
    android:background="@color/colorLightGray">
    <com.scrop.navi.NaviLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/str_setLoginPwd"
        app:backHidden="false">
    </com.scrop.navi.NaviLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:background="@drawable/shape_border_round_white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_phonenum"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/str_phonenum_placeholder"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dip"
                style="@style/EditTextNoLine"                android:layout_marginLeft="10dp"
                android:hint="@string/str_input_verificationcode"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sendercode"
                android:layout_marginRight="10dip"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/shape_border_round_white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dip"
                style="@style/EditTextNoLine"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dip"
                android:hint="@string/str_input_newPwd"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dip"
                style="@style/EditTextNoLine"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dip"
                android:hint="@string/str_verifity_newPwd"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:backgroundTint="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/str_sure"/>
</LinearLayout>
