<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sc="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scrop.account.RegisterActivity">
    <com.scrop.navi.NaviLayout
        android:id="@+id/id_navi"
        sc:title="@string/str_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        sc:backHidden="false">
    </com.scrop.navi.NaviLayout>
    <EditText
        android:id="@+id/id_et_phonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text_border_round"
        style="@style/EditTextRegister"
        android:hint="@string/str_input_phonenum"
        android:layout_marginTop="20dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginLeft="20dip"
        android:orientation="horizontal"
        android:background="@drawable/shape_text_border_round">
        <EditText
            android:id="@+id/id_et_VerificationCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:background="@null"
            android:hint="@string/str_input_verificationcode"
            android:layout_weight="0.6"/>
        <Button
            android:id="@+id/id_btn_sendCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_sendercode"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorGreen"
            android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:id="@+id/id_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text_border_round_top"
        style="@style/EditTextRegister"
        android:hint="@string/str_input_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dip" />
    <EditText
        android:id="@+id/id_et_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text_border_round_bottom"
        style="@style/EditTextRegister"
        android:inputType="textPassword"
        android:hint="@string/str_input_password_again" />
    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/str_register"
        style="@style/ButtonRoundGreen"/>
</LinearLayout>