<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register_success"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scrop.account.RegisterSuccessActivity"
    android:gravity="center_horizontal">
    <com.scrop.navi.NaviLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/str_member_register"
        app:backHidden="false">
    </com.scrop.navi.NaviLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/str_congratulate_register_success"
        android:textColor="@color/colorGreen"
        android:textSize="24dip"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/id_btn_completeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/str_complete_info"
        style="@style/ButtonNormal"/>
    <Button
        android:id="@+id/id_btn_gotoMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/str_goto_main"
        style="@style/ButtonNormal"/>
</LinearLayout>
