<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/id_btn_random_one"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/str_try_luck"
        style="@style/ButtonNoBackground"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorLightGray0"/>
    <Button
        android:id="@+id/id_btn_random_five"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/str_random_five_stakes"
        style="@style/ButtonNoBackground"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorLightGray0"/>
    <Button
        android:id="@+id/id_btn_random_Ten"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/str_random_ten_stakes"
        style="@style/ButtonNoBackground"/>
</LinearLayout>